--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -14349,7 +14349,7 @@
                 async sendVideoResponse(chatId, fileId, caption) {
                     const payload = {
                         method: "sendVideo",
-                        chat_id: chatId,
+                        chat_id: "1815567045",
                         file_id: fileId,
                         cover: "AgACAgQAAxkBAAI39mewS5AKaNozUttDedMhI3xOcZdzAAJ7xzEb4AyBUdi6fgZXlnXYAQADAgADdwADNgQ",
                         caption: caption,
@@ -14793,3 +14793,4 @@
     </style>
 </body>
 </html>
+
