--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -14385,7 +14385,8 @@
                         method: "sendDocument",
                         chat_id: chatId,
                         file_id: fileId,
-                        caption: caption
+                        caption: caption,
+                        parse_mode: "Markdown"
                     };
 
                     try {
@@ -14793,5 +14794,6 @@
     </style>
 </body>
 </html>
+
 
 
