--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5657,7 +5657,7 @@
                     "س": ["ش","س"],
                     "ش": ["س","ش"],
                     },
-                    jsonUrl: "https://enc.mdccxxixix.workers.dev/",
+                    jsonUrl: "https://enc.mdccxxixix.workers.dev",
                     showTooltip: false,
                     showTooltip1: false,
                     showTooltip2: false,
@@ -14794,6 +14794,7 @@
     </style>
 </body>
 </html>
+
 
 
 
