--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -704,7 +704,7 @@
             </div>
         </div> -->
 
-        <div id="app">
+        <!--<div id="app">
             <div class="flex flex-col items-center justify-center mt-10 px-4 sm:px-6 md:px-8 lg:px-10 xl:px-12">
                 <div class="relative overflow-hidden bg-yellow-200 border border-yellow-400 px-4 sm:px-6 md:px-8 py-3 sm:py-4 rounded-lg w-full max-w-2xl shadow-lg">
                     <div class="flex items-center justify-center">
@@ -715,7 +715,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     <br>
         <!-- Search and Filters -->
