--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -513,16 +513,24 @@
                                         <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="رجوع" class="h-6 w-6" />
                                     </button>
                                 </legend>
-                                <div v-if="!selectedEpisode" class="grid grid-cols-3 gap-2">
+                                <div v-if="!selectedEpisode" class="grid grid-cols-3 gap-2" dir="ltr">
                                     <button 
-                                    v-for="episode in groupedEpisodes[activeTab.episodes]?.items" 
-                                    @click="selectEpisode(episode)" 
-                                    class="bg-blue-500 text-white p-2 rounded hover:bg-green-500">
-                                    {{ episode.EpisodeNumber }}
-                                </button>                                
+                                        v-for="episode in groupedEpisodes[activeTab.episodes]?.items" 
+                                        @click="selectEpisode(episode)" 
+                                        class="bg-blue-500 text-white p-2 rounded hover:bg-green-500">
+                                        {{ episode.EpisodeNumber }}
+                                    </button>                                
                                 </div>
                                 <div v-else class="flex flex-col justify-center gap-4">
-                                    <span class="text-lg font-bold text-center">{{ selectedEpisode.EpisodeNumber }}</span>
+                                    <div class="flex items-center justify-center gap-4">
+                                        <button v-if="hasPreviousEpisode" @click="navigateToPreviousEpisode" class="hover:opacity-70 transition-opacity">
+                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
+                                        </button>
+                                        <span class="text-lg font-bold text-center">{{ selectedEpisode.EpisodeNumber }}</span>
+                                        <button v-if="hasNextEpisode" @click="navigateToNextEpisode" class="hover:opacity-70 transition-opacity">
+                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
+                                        </button>
+                                    </div>
                                     <div v-for="(video, index) in selectedEpisode.EpisodeVideosIDs" 
                                         :key="video.VideoID" 
                                         class="relative flex flex-col gap-4">
@@ -569,7 +577,7 @@
                                         <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="رجوع" class="h-6 w-6" />
                                     </button>
                                 </legend>
-                                <div v-if="!selectedEpisode" class="grid grid-cols-3 gap-2">
+                                <div v-if="!selectedEpisode" class="grid grid-cols-3 gap-2" dir="ltr">
                                     <button 
                                     v-for="movie in groupedMovies[activeTab.movies]?.items" 
                                     @click="selectMovie(movie)" 
@@ -625,7 +633,7 @@
                                         <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="رجوع" class="h-6 w-6" />
                                     </button>
                                 </legend>
-                                <div v-if="!selectedManga" class="grid grid-cols-3 gap-2">
+                                <div v-if="!selectedManga" class="grid grid-cols-3 gap-2" dir="ltr">
                                     <button 
                                     v-for="manga in groupedMangas[activeTab.mangas]?.items" 
                                     @click="selectManga(manga)" 
@@ -6348,6 +6356,24 @@
                         }
                         return acc;
                     }, []);
+                },
+
+                hasNextEpisode() {
+                    if (!this.selectedEpisode || !this.groupedEpisodes[this.activeTab.episodes]) {
+                        return false;
+                    }
+                    const currentGroup = this.groupedEpisodes[this.activeTab.episodes].items;
+                    const currentIndex = currentGroup.findIndex(ep => ep.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
+                    return currentIndex !== -1 && currentIndex < currentGroup.length - 1;
+                },
+
+                hasPreviousEpisode() {
+                    if (!this.selectedEpisode || !this.groupedEpisodes[this.activeTab.episodes]) {
+                        return false;
+                    }
+                    const currentGroup = this.groupedEpisodes[this.activeTab.episodes].items;
+                    const currentIndex = currentGroup.findIndex(ep => ep.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
+                    return currentIndex !== -1 && currentIndex > 0;
                 },
 
                 filteredEpisodes() {
@@ -14704,6 +14730,24 @@
                     this.selectedEpisode = episode;
                 },
 
+                navigateToNextEpisode() {
+                    if (!this.hasNextEpisode) return;
+                    const currentGroup = this.groupedEpisodes[this.activeTab.episodes].items;
+                    const currentIndex = currentGroup.findIndex(ep => ep.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
+                    if (currentIndex !== -1 && currentIndex < currentGroup.length - 1) {
+                        this.selectedEpisode = currentGroup[currentIndex + 1];
+                    }
+                },
+
+                navigateToPreviousEpisode() {
+                    if (!this.hasPreviousEpisode) return;
+                    const currentGroup = this.groupedEpisodes[this.activeTab.episodes].items;
+                    const currentIndex = currentGroup.findIndex(ep => ep.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
+                    if (currentIndex !== -1 && currentIndex > 0) {
+                        this.selectedEpisode = currentGroup[currentIndex - 1];
+                    }
+                },
+
                 selectMovie(movie) {
                     this.selectedEpisode = movie;
                 },
@@ -14835,13 +14879,3 @@
     </style>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
