--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -522,12 +522,12 @@
                                     </button>                                
                                 </div>
                                 <div v-else class="flex flex-col justify-center gap-4">
-                                    <div class="flex items-center justify-center gap-4">
-                                        <button v-if="hasPreviousEpisode" @click="navigateToPreviousEpisode" class="hover:opacity-70 transition-opacity">
+                                    <div class="flex items-center justify-between px-4">
+                                        <button v-if="hasPreviousEpisode" @click="navigateToPreviousEpisode(); resetEpisodesView();" class="hover:opacity-70 transition-opacity">
                                             <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
                                         </button>
                                         <span class="text-lg font-bold text-center">{{ selectedEpisode.EpisodeNumber }}</span>
-                                        <button v-if="hasNextEpisode" @click="navigateToNextEpisode" class="hover:opacity-70 transition-opacity">
+                                        <button v-if="hasNextEpisode" @click="navigateToNextEpisode(); resetEpisodesView();" class="hover:opacity-70 transition-opacity">
                                             <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
                                         </button>
                                     </div>
@@ -577,7 +577,7 @@
                                         <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="رجوع" class="h-6 w-6" />
                                     </button>
                                 </legend>
-                                <div v-if="!selectedEpisode" class="grid grid-cols-3 gap-2" dir="ltr">
+                                <div v-if="!selectedEpisode" class="grid grid-cols-3 gap-2">
                                     <button 
                                     v-for="movie in groupedMovies[activeTab.movies]?.items" 
                                     @click="selectMovie(movie)" 
