--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -522,15 +522,21 @@
                                     </button>                                
                                 </div>
                                 <div v-else class="flex flex-col justify-center gap-4">
-                                    <div class="flex items-center justify-between px-4">
-                                        <button v-if="hasNextEpisode" @click="navigateToNextEpisode();" class="hover:opacity-70 transition-opacity">
-                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
-                                        </button>
-                                        <span class="text-lg font-bold text-center">{{ selectedEpisode.EpisodeNumber }}</span>
+                                <div class="flex items-center px-4">
+                                    <div class="w-8 flex justify-start">
                                         <button v-if="hasPreviousEpisode" @click="navigateToPreviousEpisode();" class="hover:opacity-70 transition-opacity">
                                             <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
                                         </button>
                                     </div>
+                                    <div class="flex-grow text-center">
+                                        <span class="text-lg font-bold">{{ selectedEpisode.EpisodeNumber }}</span>
+                                    </div>
+                                    <div class="w-8 flex justify-end">
+                                        <button v-if="hasNextEpisode" @click="navigateToNextEpisode();" class="hover:opacity-70 transition-opacity">
+                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
+                                        </button>
+                                    </div>
+                                </div>
                                     <div v-for="(video, index) in selectedEpisode.EpisodeVideosIDs" 
                                         :key="video.VideoID" 
                                         class="relative flex flex-col gap-4">
