--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -524,7 +524,7 @@
                                 <div v-else class="flex flex-col justify-center gap-4">
                                 <div class="flex items-center px-4">
                                     <div class="w-8 flex justify-start">
-                                        <button v-if="hasNextEpisode" @click="navigateToNextEpisode();" class="hover:opacity-70 transition-opacity">
+                                        <button v-if="hasNextEpisode" @click="navigateToNextEpisode(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity">
                                             <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
                                         </button>
                                     </div>
@@ -532,7 +532,7 @@
                                         <span class="text-lg font-bold">{{ selectedEpisode.EpisodeNumber }}</span>
                                     </div>
                                     <div class="w-8 flex justify-end">
-                                        <button v-if="hasPreviousEpisode" @click="navigateToPreviousEpisode();" class="hover:opacity-70 transition-opacity">
+                                        <button v-if="hasPreviousEpisode" @click="navigateToPreviousEpisode(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity">
                                             <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
                                         </button>
                                     </div>
@@ -14386,10 +14386,10 @@
 
                     try {
                         await this.sendVideoResponse(chatId, videoID, caption);
-                        this.selectedEpisode.EpisodeVideosIDs[index].status = 'success';
+                        this.selectedEpisode.EpisodeVideosIDs.status = 'success';
                         this.errorMessage = "";
                     } catch (error) {
-                        this.selectedEpisode.EpisodeVideosIDs[index].status = 'error';
+                        this.selectedEpisode.EpisodeVideosIDs.status = 'error';
                         this.errorMessage = error.message;
                         if (this.selectedEpisode.EpisodeVideosIDs.some((video) => video.status === "error")) {
                             return;
@@ -14709,6 +14709,22 @@
                         movies: 0,
                         mangas: 0
                     };
+                },
+
+                resetStatusForEpisodeManga() {
+                    // Reset status for all videos and episode mangas when closing modal 
+                    if (this.selectedEpisode) {
+                        if (this.selectedEpisode.EpisodeVideosIDs) {
+                        this.selectedEpisode.EpisodeVideosIDs.forEach((video, index) => {
+                            this.selectedEpisode.EpisodeVideosIDs[index].status = null;
+                        });
+                        }
+                        if (this.selectedEpisode.EpisodeMangasIDs) {
+                        this.selectedEpisode.EpisodeMangasIDs.forEach((manga, index) => {
+                            this.selectedEpisode.EpisodeMangasIDs[index].status = null;
+                        });
+                        }
+                    }
                 },
 
                 handleEpisodeGroupChange(index) {
